--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     <input type="text" id="farrierName">
                 </div>
                 <div class="form-group">
-                    <label for="farrierCost">Cost (€):</label>
+                    <label for="farrierCost">Cost ($):</label>
                     <input type="number" id="farrierCost" min="0" step="0.01">
                 </div>
                 <div class="form-group">
@@ -621,7 +621,7 @@
                     <textarea id="vetTreatment" rows="2"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="vetCost">Cost (€):</label>
+                    <label for="vetCost">Cost ($):</label>
                     <input type="number" id="vetCost" min="0" step="0.01">
                 </div>
                 <div class="form-group">
