--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }
 
         .tabs {
-            margin: 0 0.25rem 0.25rem;
+            margin: 0.25rem 0.25rem 0.25rem;
             padding: 0 0.25rem;
         }
 
