--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         .tabs {
             margin: 0.25rem 0.25rem 0.25rem;
-            padding: 0 0.25rem;
+            padding: 0.25rem 0.25rem;
         }
 
         .tabs select {
