--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         }
 
         .tabs {
-            margin: 0.5rem 0.25rem 0.25rem;
-            padding: 0.5rem 0.25rem;
+            margin: 0.5rem 0.25rem 0.25rem 0.5rem;
+            padding: 0.5rem 0.25rem 0 0.5rem;
         }
 
         .tabs select {
