--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
         .horse-selector {
             display: flex;
-            align-items: center;
+            align-items: left;
             gap: 0.5rem;
-            margin: 0 0.25rem 0.25rem;
+            margin: 0.5rem 0.25rem;
             padding: 0 0.25rem;
         }
 
@@ -123,8 +123,8 @@
         }
 
         .tabs {
-            margin: 0.5rem 0.25rem 0.25rem 0.5rem;
-            padding: 0.5rem 0.25rem 0 0.5rem;
+            margin: 0.5rem 0.25rem;
+            padding: 0 0.25rem;
         }
 
         .tabs select {
