--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #F5F7FA;
-            color: #333;
+            background-color: #FFF8F0;
+            color: #2C3E50;
             line-height: 1.4;
             min-height: 100vh;
         }
 
         .header {
-            background: linear-gradient(135deg, #2F4F4F, #708090);
-            color: #F0F6FF;
+            background: linear-gradient(135deg, #FF6B6B, #FF9500);
+            color: #FFFFFF;
             padding: 0.4rem 0;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -52,7 +52,7 @@
             align-items: center;
             position: sticky;
             top: 0;
-            background: #F5F7FA;
+            background: #FFF8F0;
             z-index: 10;
             padding: 0 0.25rem;
         }
@@ -69,34 +69,34 @@
         }
 
         .btn-primary {
-            background: #4682B4;
-            color: #F0F6FF;
+            background: #FF6B6B;
+            color: #FFFFFF;
         }
 
         .btn-primary:hover {
-            background: #B0C4DE;
+            background: #FF8A8A;
             transform: translateY(-1px);
         }
 
         .btn-secondary {
-            background: #adb5bd;
-            color: #333;
-            border: 1px solid #6c757d;
+            background: #4ECDC4;
+            color: #FFFFFF;
+            border: 1px solid #4ECDC4;
             font-size: 0.7rem;
             padding: 0.4rem 0.8rem;
         }
 
         .btn-secondary:hover {
-            background: #9ea6ae;
+            background: #5DD6CE;
         }
 
         .btn-danger {
-            background: #dc3545;
-            color: #F0F6FF;
+            background: #E74C3C;
+            color: #FFFFFF;
         }
 
         .btn-danger:hover {
-            background: #c82333;
+            background: #C0392B;
         }
 
         .horse-selector {
@@ -110,16 +110,17 @@
         .horse-selector label {
             font-size: 0.9rem;
             font-weight: bold;
-            color: #555;
+            color: #2C3E50;
         }
 
         .horse-selector select {
             padding: 0.4rem;
-            border: 1px solid #ddd;
+            border: 1px solid #FFE66D;
             border-radius: 4px;
             font-size: 0.9rem;
             width: auto;
             flex-grow: 1;
+            background: #FFFFFF;
         }
 
         .tabs {
@@ -133,21 +134,22 @@
         .tabs label {
             font-size: 0.9rem;
             font-weight: bold;
-            color: #555;
+            color: #2C3E50;
         }
 
         .tabs select {
             padding: 0.4rem;
-            border: 1px solid #ddd;
+            border: 1px solid #FFE66D;
             border-radius: 4px;
             font-size: 0.9rem;
             width: auto;
             flex-grow: 1;
             cursor: pointer;
+            background: #FFFFFF;
         }
 
         .tab-content {
-            background: #F0F6FF;
+            background: #FFFFFF;
             padding: 0.25rem;
             border-radius: 0 0 6px 6px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -173,7 +175,7 @@
             display: block;
             margin-bottom: 0.3rem;
             font-weight: 500;
-            color: #555;
+            color: #2C3E50;
             font-size: 0.9rem;
         }
 
@@ -182,17 +184,18 @@
         .form-group textarea {
             width: 100%;
             padding: 0.4rem;
-            border: 1px solid #ddd;
+            border: 1px solid #FFE66D;
             border-radius: 4px;
             font-size: 0.9rem;
             transition: border-color 0.2s ease;
+            background: #FFFFFF;
         }
 
         .form-group input:focus,
         .form-group select:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #4682B4;
+            border-color: #FF6B6B;
         }
 
         .form-row {
@@ -206,11 +209,11 @@
         }
 
         .record-item {
-            background: #F0F6FF;
+            background: #FFFFFF;
             padding: 0.4rem;
             border-radius: 6px;
             margin-bottom: 0.5rem;
-            border-left: 3px solid #4682B4;
+            border-left: 3px solid #FF6B6B;
         }
 
         .record-header {
@@ -222,7 +225,7 @@
 
         .record-type {
             font-weight: bold;
-            color: #4682B4;
+            color: #FF6B6B;
             font-size: 0.9rem;
         }
 
@@ -232,14 +235,14 @@
         }
 
         .record-details {
-            color: #555;
+            color: #2C3E50;
             margin-top: 0.25rem;
             font-size: 0.8rem;
         }
 
         .upcoming-reminders {
-            background: #E6F0FA;
-            border: 1px solid #B0C4DE;
+            background: #FFF8F0;
+            border: 1px solid #FFE66D;
             padding: 0 0.25rem 0.5rem;
             border-radius: 6px;
             margin: 0 0.25rem 0.75rem;
@@ -250,7 +253,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 0.5rem 0;
-            border-bottom: 1px solid #B0C4DE;
+            border-bottom: 1px solid #FFE66D;
             font-size: 0.8rem;
         }
 
@@ -259,8 +262,8 @@
         }
 
         .overdue {
-            background: #FFE4E1;
-            border-color: #FFC1CC;
+            background: #FFE5E5;
+            border-color: #FF6B6B;
         }
 
         .modal {
@@ -275,7 +278,7 @@
         }
 
         .modal-content {
-            background: #F0F6FF;
+            background: #FFFFFF;
             margin: 0 0.25rem;
             padding: 0 0.25rem;
             border-radius: 8px;
@@ -300,7 +303,7 @@
         }
 
         .close:hover {
-            color: #000;
+            color: #2C3E50;
         }
 
         .empty-state {
