--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #0f172a 0%, #1e293b 50%, #334155 100%);
-            color: #e2e8f0;
+            background: #F8F9FA;
+            color: #212529;
             line-height: 1.6;
             min-height: 100vh;
             font-weight: 400;
         }
 
         .header {
-            background: linear-gradient(135deg, #0d9488 0%, #fb923c 50%, #06b6d4 100%);
+            background: linear-gradient(135deg, #2E86AB 0%, #A23B72 50%, #F18F01 100%);
             color: white;
             padding: 1.5rem 0;
             text-align: center;
-            box-shadow: 0 10px 40px rgba(13, 148, 136, 0.4);
+            box-shadow: 0 10px 40px rgba(46, 134, 171, 0.3);
             position: relative;
             overflow: hidden;
         }
@@ -60,13 +60,13 @@
             align-items: center;
             position: sticky;
             top: 0;
-            background: rgba(30, 41, 59, 0.95);
+            background: rgba(248, 249, 250, 0.95);
             backdrop-filter: blur(20px);
             z-index: 10;
             padding: 1rem;
             border-radius: 20px;
-            border: 2px solid rgba(13, 148, 136, 0.3);
-            box-shadow: 0 8px 32px rgba(13, 148, 136, 0.2);
+            border: 2px solid rgba(46, 134, 171, 0.1);
+            box-shadow: 0 8px 32px rgba(46, 134, 171, 0.1);
             overflow-x: auto;
         }
 
@@ -104,38 +104,36 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #0d9488, #06b6d4);
+            background: linear-gradient(135deg, #2E86AB, #1e5f7a);
             color: white;
-            box-shadow: 0 6px 25px rgba(13, 148, 136, 0.4);
+            box-shadow: 0 6px 25px rgba(46, 134, 171, 0.4);
         }
 
         .btn-primary:hover {
             transform: translateY(-3px) scale(1.02);
-            box-shadow: 0 12px 40px rgba(13, 148, 136, 0.6);
+            box-shadow: 0 12px 40px rgba(46, 134, 171, 0.6);
         }
 
         .btn-secondary {
-            background: linear-gradient(135deg, #334155, #475569);
-            color: #e2e8f0;
-            box-shadow: 0 6px 25px rgba(51, 65, 85, 0.4);
-            border: 1px solid rgba(13, 148, 136, 0.3);
+            background: linear-gradient(135deg, #A23B72, #7a2c56);
+            color: white;
+            box-shadow: 0 6px 25px rgba(162, 59, 114, 0.4);
         }
 
         .btn-secondary:hover {
             transform: translateY(-3px) scale(1.02);
-            box-shadow: 0 12px 40px rgba(51, 65, 85, 0.6);
-            background: linear-gradient(135deg, #475569, #64748b);
+            box-shadow: 0 12px 40px rgba(162, 59, 114, 0.6);
         }
 
         .btn-danger {
-            background: linear-gradient(135deg, #fb923c, #f97316);
+            background: linear-gradient(135deg, #F18F01, #d17800);
             color: white;
-            box-shadow: 0 6px 25px rgba(251, 146, 60, 0.4);
+            box-shadow: 0 6px 25px rgba(241, 143, 1, 0.4);
         }
 
         .btn-danger:hover {
             transform: translateY(-3px) scale(1.02);
-            box-shadow: 0 12px 40px rgba(251, 146, 60, 0.6);
+            box-shadow: 0 12px 40px rgba(241, 143, 1, 0.6);
         }
 
         .horse-selector {
@@ -144,30 +142,30 @@
 
         .horse-selector select {
             padding: 1rem 1.25rem;
-            border: 3px solid rgba(13, 148, 136, 0.3);
+            border: 3px solid rgba(46, 134, 171, 0.2);
             border-radius: 15px;
             font-size: 1rem;
             width: 100%;
-            background: #1e293b;
-            color: #e2e8f0;
+            background: white;
+            color: #212529;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 20px rgba(13, 148, 136, 0.2);
+            box-shadow: 0 4px 20px rgba(46, 134, 171, 0.1);
         }
 
         .horse-selector select:focus {
             outline: none;
-            border-color: #0d9488;
-            box-shadow: 0 0 0 4px rgba(13, 148, 136, 0.3);
+            border-color: #2E86AB;
+            box-shadow: 0 0 0 4px rgba(46, 134, 171, 0.2);
             transform: scale(1.01);
         }
 
         .tabs {
             display: flex;
-            background: #1e293b;
+            background: white;
             border-radius: 20px 20px 0 0;
             overflow: hidden;
-            box-shadow: 0 10px 40px rgba(13, 148, 136, 0.2);
-            border: 2px solid rgba(13, 148, 136, 0.3);
+            box-shadow: 0 10px 40px rgba(46, 134, 171, 0.15);
+            border: 2px solid rgba(46, 134, 171, 0.1);
         }
 
         .tab {
@@ -175,12 +173,12 @@
             padding: 1.25rem;
             text-align: center;
             cursor: pointer;
-            background: linear-gradient(135deg, #334155, #475569);
+            background: linear-gradient(135deg, #f8f9fa, #e9ecef);
             border: none;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             font-size: 1rem;
             font-weight: 600;
-            color: #94a3b8;
+            color: #6c757d;
             position: relative;
             text-transform: uppercase;
             letter-spacing: 0.5px;
@@ -193,13 +191,13 @@
             left: 50%;
             width: 0;
             height: 4px;
-            background: linear-gradient(90deg, #0d9488, #fb923c);
+            background: linear-gradient(90deg, #2E86AB, #A23B72);
             transition: all 0.3s ease;
             border-radius: 2px 2px 0 0;
         }
 
         .tab.active {
-            background: linear-gradient(135deg, #0d9488, #059669);
+            background: linear-gradient(135deg, #2E86AB, #1e5f7a);
             color: white;
         }
 
@@ -209,20 +207,20 @@
         }
 
         .tab:hover {
-            background: linear-gradient(135deg, #475569, #64748b);
-            color: #e2e8f0;
+            background: linear-gradient(135deg, #e9ecef, #dee2e6);
+            color: #212529;
             transform: translateY(-2px);
         }
 
         .tab-content {
-            background: #1e293b;
+            background: white;
             padding: 2rem;
             border-radius: 0 0 20px 20px;
-            box-shadow: 0 10px 40px rgba(13, 148, 136, 0.2);
+            box-shadow: 0 10px 40px rgba(46, 134, 171, 0.15);
             max-height: 60vh;
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
-            border: 2px solid rgba(13, 148, 136, 0.3);
+            border: 2px solid rgba(46, 134, 171, 0.1);
             border-top: none;
         }
 
@@ -242,7 +240,7 @@
             display: block;
             margin-bottom: 0.6rem;
             font-weight: 700;
-            color: #0d9488;
+            color: #2E86AB;
             font-size: 1rem;
             text-transform: uppercase;
             letter-spacing: 0.5px;
@@ -253,21 +251,21 @@
         .form-group textarea {
             width: 100%;
             padding: 1rem 1.25rem;
-            border: 3px solid rgba(13, 148, 136, 0.3);
+            border: 3px solid rgba(46, 134, 171, 0.2);
             border-radius: 15px;
             font-size: 1rem;
             transition: all 0.3s ease;
-            background: #334155;
-            color: #e2e8f0;
-            box-shadow: 0 4px 20px rgba(13, 148, 136, 0.2);
+            background: white;
+            color: #212529;
+            box-shadow: 0 4px 20px rgba(46, 134, 171, 0.1);
         }
 
         .form-group input:focus,
         .form-group select:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #0d9488;
-            box-shadow: 0 0 0 4px rgba(13, 148, 136, 0.3);
+            border-color: #2E86AB;
+            box-shadow: 0 0 0 4px rgba(46, 134, 171, 0.2);
             transform: scale(1.01);
         }
 
@@ -281,11 +279,11 @@
         }
 
         .record-item {
-            background: linear-gradient(135deg, rgba(13, 148, 136, 0.1) 0%, rgba(30, 41, 59, 0.8) 100%);
+            background: linear-gradient(135deg, rgba(46, 134, 171, 0.05) 0%, rgba(248, 249, 250, 0.8) 100%);
             padding: 1.5rem;
             border-radius: 20px;
             margin-bottom: 1.25rem;
-            border: 2px solid rgba(13, 148, 136, 0.3);
+            border: 2px solid rgba(46, 134, 171, 0.1);
             position: relative;
             overflow: hidden;
             transition: all 0.3s ease;
@@ -293,7 +291,7 @@
 
         .record-item:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(13, 148, 136, 0.3);
+            box-shadow: 0 10px 30px rgba(46, 134, 171, 0.15);
         }
 
         .record-item::before {
@@ -303,7 +301,7 @@
             left: 0;
             width: 6px;
             height: 100%;
-            background: linear-gradient(180deg, #0d9488, #fb923c);
+            background: linear-gradient(180deg, #2E86AB, #A23B72);
             border-radius: 0 3px 3px 0;
         }
 
@@ -316,31 +314,31 @@
 
         .record-type {
             font-weight: 800;
-            color: #0d9488;
+            color: #2E86AB;
             font-size: 1.1rem;
             text-transform: uppercase;
             letter-spacing: 0.5px;
         }
 
         .record-date {
-            color: #94a3b8;
+            color: #6c757d;
             font-size: 0.9rem;
             font-weight: 600;
-            background: rgba(13, 148, 136, 0.2);
+            background: rgba(46, 134, 171, 0.1);
             padding: 0.25rem 0.75rem;
             border-radius: 12px;
         }
 
         .record-details {
-            color: #cbd5e1;
+            color: #495057;
             margin-top: 0.75rem;
             font-size: 1rem;
             line-height: 1.6;
         }
 
         .upcoming-reminders {
-            background: linear-gradient(135deg, rgba(251, 146, 60, 0.15) 0%, rgba(13, 148, 136, 0.1) 100%);
-            border: 2px solid rgba(251, 146, 60, 0.4);
+            background: linear-gradient(135deg, rgba(241, 143, 1, 0.05) 0%, rgba(46, 134, 171, 0.05) 100%);
+            border: 2px solid rgba(241, 143, 1, 0.2);
             padding: 1.5rem;
             border-radius: 20px;
             margin-bottom: 1.5rem;
@@ -355,7 +353,7 @@
             left: 0;
             width: 100%;
             height: 4px;
-            background: linear-gradient(90deg, #fb923c, #0d9488);
+            background: linear-gradient(90deg, #F18F01, #2E86AB);
         }
 
         .reminder-item {
@@ -363,10 +361,10 @@
             justify-content: space-between;
             align-items: center;
             padding: 0.75rem 0;
-            border-bottom: 1px solid rgba(251, 146, 60, 0.3);
+            border-bottom: 1px solid rgba(241, 143, 1, 0.1);
             font-size: 1rem;
             font-weight: 500;
-            color: #e2e8f0;
+            color: #212529;
         }
 
         .reminder-item:last-child {
@@ -374,8 +372,8 @@
         }
 
         .overdue {
-            background: linear-gradient(135deg, rgba(251, 146, 60, 0.3) 0%, rgba(249, 115, 22, 0.2) 100%);
-            border-color: rgba(251, 146, 60, 0.6);
+            background: linear-gradient(135deg, rgba(241, 143, 1, 0.1) 0%, rgba(162, 59, 114, 0.1) 100%);
+            border-color: rgba(241, 143, 1, 0.3);
             animation: urgent 2s ease-in-out infinite;
         }
 
@@ -391,13 +389,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(15, 23, 42, 0.8);
+            background: rgba(33, 37, 41, 0.7);
             z-index: 1000;
             backdrop-filter: blur(8px);
         }
 
         .modal-content {
-            background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
+            background: linear-gradient(135deg, white 0%, rgba(248, 249, 250, 0.95) 100%);
             margin: 3% auto;
             padding: 2.5rem;
             border-radius: 25px;
@@ -406,8 +404,8 @@
             max-height: 80vh;
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
-            border: 2px solid rgba(13, 148, 136, 0.3);
-            box-shadow: 0 25px 80px rgba(13, 148, 136, 0.4);
+            border: 2px solid rgba(46, 134, 171, 0.1);
+            box-shadow: 0 25px 80px rgba(46, 134, 171, 0.2);
         }
 
         .modal-header {
@@ -418,7 +416,7 @@
         }
 
         .modal-header h3 {
-            color: #0d9488;
+            color: #2E86AB;
             font-weight: 800;
             text-transform: uppercase;
             letter-spacing: 0.5px;
@@ -427,31 +425,52 @@
         .close {
             font-size: 1.75rem;
             cursor: pointer;
-            color: #94a3b8;
+            color: #6c757d;
             transition: all 0.3s ease;
-            background: rgba(251, 146, 60, 0.2);
+            background: rgba(241, 143, 1, 0.1);
             padding: 0.5rem;
             border-radius: 50%;
         }
 
         .close:hover {
-            color: #fb923c;
-            background: rgba(251, 146, 60, 0.3);
+            color: #F18F01;
+            background: rgba(241, 143, 1, 0.2);
             transform: scale(1.1);
         }
 
         .empty-state {
             text-align: center;
             padding: 3rem;
-            color: #94a3b8;
+            color: #6c757d;
             font-size: 1.1rem;
         }
 
         .empty-state img {
             width: 120px;
-            opacity: 0.4;
+            opacity: 0.5;
             margin-bottom: 1.5rem;
-            filter: hue-rotate(180deg) saturate(1.5) brightness(0.8);
+            filter: hue-rotate(200deg) saturate(1.2);
+        }
+
+        /* Scrollbar Styling */
+        ::-webkit-scrollbar {
+            width: 12px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: rgba(248, 249, 250, 0.8);
+            border-radius: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: linear-gradient(180deg, #2E86AB, #A23B72);
+            border-radius: 10px;
+            border: 2px solid rgba(248, 249, 250, 0.8);
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: linear-gradient(180deg, #1e5f7a, #7a2c56);
+        }
         }
 
         /* Scrollbar Styling */
