--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         .container {
             max-width: 1000px;
             margin: 0 auto;
-            padding: 1.5rem 1.5rem 5rem 1.5rem; /* Added bottom padding to avoid overlap with footer */
+            padding: 1.5rem 1.5rem 5rem 1.5rem;
         }
 
         .controls {
@@ -400,7 +400,7 @@
         .upcoming-reminders {
             background: linear-gradient(135deg, rgba(241, 143, 1, 0.05) 0%, rgba(46, 134, 171, 0.05) 100%);
             border: 2px solid rgba(241, 143, 1, 0.2);
-            padding: 1.5rem;
+            padding: 0.25rem;
             border-radius: 20px;
             margin-bottom: 1.5rem;
             position: relative;
@@ -421,7 +421,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0.75rem 0;
+            padding: 0.25rem 0;
             border-bottom: 1px solid rgba(241, 143, 1, 0.1);
             font-size: 1rem;
             font-weight: 500;
@@ -539,7 +539,7 @@
 
         @media (max-width: 768px) {
             .container {
-                padding: 1rem 1rem 4rem 1rem; /* Adjusted bottom padding for mobile */
+                padding: 1rem 1rem 4rem 1rem;
             }
             
             .form-row {
