--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
             <form id="addVaccinationForm">
                 <div class="form-group">
                     <label for="vaccineType">Vaccine Type:</label>
-                    <select id="vaccineType" required onfocus="stopPropagation(event)">
+                    <select id="vaccineType" required>
                         <option value="">Select vaccine type</option>
                         <option value="Tetanus">Tetanus</option>
                         <option value="EEE/WEE">Eastern/Western Encephalitis</option>
@@ -804,7 +804,7 @@
             <form id="addDewormingForm">
                 <div class="form-group">
                     <label for="dewormingProduct">Product Used:</label>
-                    <select id="dewormingProduct" required onfocus="stopPropagation(event)">
+                    <select id="dewormingProduct" required>
                         <option value="">Select product</option>
                         <option value="Ivermectin">Ivermectin</option>
                         <option value="Fenbendazole">Fenbendazole</option>
@@ -851,7 +851,7 @@
             <form id="addFarrierForm">
                 <div class="form-group">
                     <label for="farrierService">Service Type:</label>
-                    <select id="farrierService" required onfocus="stopPropagation(event)">
+                    <select id="farrierService" required>
                         <option value="">Select service</option>
                         <option value="Trim">Trim</option>
                         <option value="Shoes - Front">Shoes - Front</option>
@@ -903,7 +903,7 @@
             <form id="addVeterinaryForm">
                 <div class="form-group">
                     <label for="vetVisitType">Visit Type:</label>
-                    <select id="vetVisitType" required onfocus="stopPropagation(event)">
+                    <select id="vetVisitType" required>
                         <option value="">Select visit type</option>
                         <option value="Routine Check-up">Routine Check-up</option>
                         <option value="Dental">Dental</option>
