api-key removed

--- a/HTT-RT.html
+++ b/HTT-RT.html
@@ -1108,7 +1108,7 @@
         // Firebase configuration - IMPORTANT: REPLACE ALL "YOUR_..." PLACEHOLDERS WITH YOUR ACTUAL FIREBASE PROJECT CONFIGURATION
         // You can find this information in your Firebase Console -> Project settings -> Your apps -> Web app (</>) -> Config
         const firebaseConfig = {
-            apiKey: "AIzaSyDrsPDMYMYY32S_G26MzwNBL1EIlieCJ0s",
+            // api key removed
             authDomain: "horse-health-tracker.firebaseapp.com",
             databaseURL: "https://horse-health-tracker-default-rtdb.firebaseio.com",
             projectId: "horse-health-tracker",
